create_graphs/compile_fred1_56801.err
  File "create_fred.py", line 841
    master_clean['edges2contract']t['type']=[]
                                  ^
SyntaxError: invalid syntax

real	0m0.214s
user	0m0.024s
sys	0m0.036s
  File "create_fred.py", line 841
    master_clean['edges2contract']t['type']=[]
                                  ^
SyntaxError: invalid syntax

real	0m0.122s
user	0m0.024s
sys	0m0.036s
  File "create_fred.py", line 841
    master_clean['edges2contract']t['type']=[]
                                  ^
SyntaxError: invalid syntax

real	0m0.127s
user	0m0.032s
sys	0m0.032s

real	3m50.077s
user	0m57.660s
sys	0m9.108s

real	1m46.094s
user	0m1.872s
sys	0m1.232s
